more text alignment in header

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,8 @@ header {
     grid-template-columns: 70px auto;
     background-color: darkolivegreen;
     color: white;
-    text-align: center;
 }
 
+.portal-header-name {
+    text-align: center;
+}
