--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ header {
     grid-template-columns: 70px auto;
     background-color: darkolivegreen;
     color: white;
+    padding: 5px;
 }
 
 .portal-header-name {
@@ -12,4 +13,9 @@ header {
 footer {
     background-color: darkolivegreen;
     color: white;
+    padding: 5px;
+}
+
+footer p {
+    text-align: center;
 }
