--- a/css/medium.css
+++ b/css/medium.css
@@ -6,9 +6,11 @@
 
     .portal-header-img {
         grid-column: 1/2;
+        grid-row: 1/2;
     }
 
     .portal-header-name {
         grid-column: 2/3;
+        grid-row: 1/2;
     }
 }
