changed media query footer layout

--- a/css/medium.css
+++ b/css/medium.css
@@ -13,4 +13,9 @@
         grid-column: 2/3;
         grid-row: 1/2;
     }
+
+    footer {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
 }
