--- a/ranch-start/css/medium.css
+++ b/ranch-start/css/medium.css
@@ -1,3 +1,5 @@
-@media screen and (min-width: 500px) {
-    
-}
+@media only screen and (min-width: 560px) {
+    h1 {
+        color: green;
+    }
+} /* end of media query */
