--- a/ranch-start/css/medium.css
+++ b/ranch-start/css/medium.css
@@ -8,5 +8,12 @@
         flex-basis: 25%;
     }
 
+    main figure {
+        float: right;
+        width: 48%;
+        margin-left: 2%;
+        padding-bottom: .5rem;
+    }
+
 
 } /* end of media query */
