--- a/ranch-start/css/large.css
+++ b/ranch-start/css/large.css
@@ -1,5 +1,10 @@
 @media only screen and (min-width: 1028px) {
 
+    main {
+        max-width: 75rem;
+        margin: auto;
+    }
+
     nav ul {
         padding-left: 2%;
     }
@@ -14,6 +19,10 @@
 
     main figure {
         width: 31%;
+    }
+
+    div.news {
+        column-count: 3;
     }
 
 } /* end of media query */
