--- a/ranch-start/css/small.css
+++ b/ranch-start/css/small.css
@@ -73,3 +73,9 @@ main figcaption {
     text-align: center;
     font-size: .8rem;
 }
+
+footer {
+    text-align: center;
+    padding: 1rem 2%;
+    background-color: #17a8e4;
+}
