--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -2,18 +2,23 @@ img {
     max-height: 500px;
 }
 
-main, header, footer, h1, h2, p, img {
+main, header, footer {
     padding: 5px;
-    font-family: 'Be Vietnam Pro', sans-serif;
+    
 }
 
-main, header, footer {
-    margin: 0 auto;
+h1, h2, p {
+    font-family: 'Be Vietnam Pro', sans-serif;
 }
 
 .content {
     display: grid;
     grid-template-columns: auto 400px auto;
+}
+
+header {
+    text-align: center;
+    background-color: darkolivegreen;
 }
 
 div {
@@ -46,4 +51,14 @@ div.rule-thirds {
     grid-row: 3/4;
     display: grid;
     grid-template-columns: 1fr;
+}
+
+footer {
+    background-color: darkolivegreen;
+    color: white;
+    padding: 5px;
+}
+
+footer p {
+    text-align: center;
 }
