--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -19,6 +19,8 @@ h1, h2, p {
 header {
     text-align: center;
     background-color: darkolivegreen;
+    grid-column: 2/3;
+    grid-row: 1/2;
 }
 
 div {
@@ -34,21 +36,21 @@ h1, h2 {
 
 div.contrast {
     grid-column: 2/3;
-    grid-row: 1/2;
+    grid-row: 2/3;
     display: grid;
     grid-template-columns: 1fr;
 }
 
 div.visual-hierarchy {
     grid-column: 2/3;
-    grid-row: 2/3;
+    grid-row: 3/4;
     display: grid;
     grid-template-columns: 1fr;
 }
 
 div.rule-thirds {
     grid-column: 2/3;
-    grid-row: 3/4;
+    grid-row: 4/5;
     display: grid;
     grid-template-columns: 1fr;
 }
@@ -57,6 +59,7 @@ footer {
     background-color: darkolivegreen;
     color: white;
     padding: 5px;
+    grid-column: 2/3;
 }
 
 footer p {
