--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -2,9 +2,9 @@ img {
     max-height: 500px;
 }
 
-main, header, footer {
+header, footer {
     padding: 5px;
-    max-width: 350px;
+    max-width: 360px;
 }
 
 h1, h2, p {
