--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -4,7 +4,6 @@ img {
 
 header, footer {
     padding: 5px;
-    max-width: 360px;
 }
 
 h1, h2, p {
@@ -19,8 +18,7 @@ h1, h2, p {
 header {
     text-align: center;
     background-color: darkolivegreen;
-    grid-column: 2/3;
-    grid-row: 1/2;
+    max-width: 100%;
 }
 
 div {
@@ -58,8 +56,7 @@ footer {
     background-color: darkolivegreen;
     color: white;
     padding: 5px;
-    grid-column: 2/3;
-    grid-row: 5/6;
+    max-width: 100%;
 }
 
 footer p {
