--- a/lesson2/css/medium.css
+++ b/lesson2/css/medium.css
@@ -1,3 +1,26 @@
 @media only screen and (min-width: 560px) {
     
+    .content {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    
+    div.contrast {
+        grid-column: 1/2;
+        display: grid;
+        grid-template-columns: 1fr;
+        margin-top: 50px;
+    }
+    
+    div.visual-hierarchy {
+        grid-column: 2/3;
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    
+    div.rule-thirds {
+        grid-column: 1/3;
+        display: grid;
+        grid-template-columns: 1fr;
+    }
 }
