--- a/lesson2/css/medium.css
+++ b/lesson2/css/medium.css
@@ -1,4 +1,19 @@
 @media only screen and (min-width: 560px) {
     
-    
+    main {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    div.contrast {
+        grid-column: 1/2;
+    }
+
+    div.visual-hierarchy {
+        grid-column: 2/3;
+    }
+
+    div.rule-thirds {
+        grid-column: 1/3;
+    }
 }
