edited font size

--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -68,7 +68,11 @@ main figure {
 
 main h2 {
     text-align: left;
-    font-size: .8rem;
+    font-size: 2rem;
+}
+
+main p {
+    font-size: 2rem;
 }
 
 footer {
