added windchill and weather

--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -90,7 +90,7 @@
       padding: 2rem;
     }
   
-    footer div div.footer-map-side {
+    footer div div.footer-contact-side {
       text-align: right;
     }
   }
