--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -26,7 +26,7 @@
       grid-gap: 15px;
     }
   
-    main article section.home-hero {
+    .hero {
       grid-column: 1/5;
       grid-row: 1/2;
     }
@@ -66,6 +66,7 @@
       border: 2px solid #0b010c;
       margin-bottom: 0;
     }
+
   
     /* ---------- FOOTER ---------- */
     footer {
