--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -144,6 +144,31 @@ html {
   main section.home-spotlight-3 {
     display: none;
   }
+
+  .hero {
+    background-image: url('../images/jubilifehero.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    width: 100%;
+  }
+  .hero-content {
+    background-color: rgba(255, 255, 255, 0.65);
+    padding: 1.5rem;
+    text-align: center;
+    
+    margin: 2rem 10% auto 10%;
+    
+  }
+  .hero-content p {
+    font-size: 1.1rem;
+  }
+  .btn {
+    background-color: #0a4f77da;
+    color: #ffffff;
+    padding: 0.5rem;
+    border-radius: 4px 4px 4px 4px;
+  }
   
   /* ---------- FOOTER ---------- */
   footer {
