--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -71,6 +71,12 @@
       grid-column: 4/5;
       grid-row: 3/4;
     }
+
+    /* ---------- DISCOVER ---------- */
+    .discover-grid {
+      grid-template-columns: 1fr 1fr 1fr;
+      gap: 4rem;
+  }
   
     /* ---------- FOOTER ---------- */
     footer {
