--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -181,6 +181,16 @@ html {
     padding: 0.5rem;
     border-radius: 4px 4px 4px 4px;
   }
+
+  /* ---------- DISCOVER ---------- */
+  .discover-grid img:hover {
+    box-shadow: 0 0 50px #333; cursor: pointer;
+  }
+
+  .discover-grid img {
+    max-width: 100%;
+    padding: 0.5rem;
+  }
   
   /* ---------- FOOTER ---------- */
   footer {
