--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -191,6 +191,10 @@ html {
     max-width: 100%;
     padding: 0.5rem;
   }
+
+  .discover-description p {
+    font-size: 1.1rem;
+  }
   
   /* ---------- FOOTER ---------- */
   footer {
