--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -196,69 +196,99 @@ html {
     font-size: 1.1rem;
   }
 
-  /*----------- Form ----------------*/
-.join-h {
-  text-indent: 6rem;
-}
+  /*----------- FORM ----------------*/
+  .join-h {
+    text-indent: 6rem;
+  }
 
-form fieldset{
-  border: none;
-}
+  form fieldset{
+    border: none;
+  }
 
-form label.top {
-  display: block;
-  padding-top: 1.5rem;
-  margin-bottom: 0.2rem;
-  
-}
+  form label.top {
+    display: block;
+    padding-top: 1.5rem;
+    margin-bottom: 0.2rem;
+    
+  }
 
-form label.top input, form textarea {
-  -webkit-appearance: none;
-  display: block;
-  font-size: 1rem;
-  border: solid 1px;
-  border-radius: 8px;
-  padding: .75rem 40px;
-  color: #545775;
-  width: 100%;
-  max-width: 25rem;
-  background-color: rgba(48, 155, 226, 0.13);
-}
-form textarea{
-  margin-bottom: 1rem;
-}
+  form label.top input, form textarea {
+    -webkit-appearance: none;
+    display: block;
+    font-size: 1rem;
+    border: solid 1px;
+    border-radius: 8px;
+    padding: .75rem 40px;
+    color: #545775;
+    width: 100%;
+    max-width: 25rem;
+    background-color: rgba(48, 155, 226, 0.13);
+  }
+  form textarea{
+    margin-bottom: 1rem;
+  }
 
-form label.sbs {
-  display: block;
-  padding: 0.5rem;
-}
-form label.top input:required, form textarea{
-  border: #545775 1.5px;
-}
-.options-member{
-  border: #545775 1.5px;
-  margin-top: 1.5rem;
-  width: 100%;
-  max-width: 25rem;
-  border-radius: 8px;  
-  padding: 0.5rem;
-}
+  form label.sbs {
+    display: block;
+    padding: 0.5rem;
+  }
+  form label.top input:required, form textarea{
+    border: #545775 1.5px;
+  }
+  .options-member{
+    border: #545775 1.5px;
+    margin-top: 1.5rem;
+    width: 100%;
+    max-width: 25rem;
+    border-radius: 8px;  
+    padding: 0.5rem;
+  }
 
-form label.top input:required:valid, form label.top textarea:required:valid{
-  border: #BFC8AD 1.5px;
-  border-left: #BFC8AD 8px;
-}
+  form label.top input:required:valid, form label.top textarea:required:valid{
+    border: #BFC8AD 1.5px;
+    border-left: #BFC8AD 8px;
+  }
 
-form input.submitBtn{
-  border: none;
-  background-color: #545775;
-  color: white;
-  border-radius: 1rem;
-  padding: .75rem 1.5rem;
-  margin: 0 0 2rem 4%;
-  width: 96%;
-  max-width: 20rem;
-}
+  form input.submitBtn{
+    border: none;
+    background-color: #545775;
+    color: white;
+    border-radius: 1rem;
+    padding: .75rem 1.5rem;
+    margin: 0 0 2rem 4%;
+    width: 96%;
+    max-width: 20rem;
+  }
+
+/*----------- THANK YOU --------------*/
+
+  .thanks {
+    display: flex;
+    flex-direction: column; 
+    text-align: center;
+    align-items: center;
+  }
+  .thanks .thanks-item {
+    text-align: center;
+    font-size: 50px;
+
+  }
+  .thanks h1{
+    font-size: xx-large;
+  }
+  .thanks p {
+    font-size: larger;
+  }
+  .thanks a {
+    color: white;
+    background-color: #545775;
+    padding: 12px 30px;
+    text-transform: uppercase;
+    border-radius: 50px;
+    cursor: pointer;
+    text-decoration: none;
+    margin-bottom: 2rem;
+  }
   
   /* ---------- FOOTER ---------- */
   footer {
