--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -77,6 +77,45 @@
     grid-template-columns: 1fr 1fr;
 }
 
+  /*----------- GRID MODE --------------*/
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  
+}
+
+.grid section {
+margin: 0.5%;
+display: block;
+}
+.grid section:nth-child(1) {
+grid-column: 1 / 2;
+
+}
+.grid section:nth-child(2) {
+grid-column: 2 / 3;
+grid-row: 1 / 2;
+}
+.grid section:nth-child(3) {
+grid-row: 2 / 3; 
+}
+.grid section:nth-child(4) {
+grid-row: 2 / 3;
+grid-column: 2 / 3;
+}
+/*----------- LIST MODE --------------*/
+.list section {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  margin: 0;
+  column-gap: 1.5em;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+
+}
+
   
     /* ---------- FOOTER ---------- */
     footer {
