started temple page

--- a/templesuites/css/small.css
+++ b/templesuites/css/small.css
@@ -293,9 +293,9 @@ html {
     margin-bottom: 2rem;
   }
 
-  /*---------- DIRECTORY ----------*/
+  /*---------- TEMPLES ----------*/
 
-  .directory-font h1{
+  .temples-font h1{
     text-align: center;
   }
   
