--- a/templesuites/css/medium.css
+++ b/templesuites/css/medium.css
@@ -60,7 +60,7 @@
     }
 
 
-  /*----------- GRID MODE --------------*/
+  /*----------- TEMPLES --------------*/
 
 .grid {
   display: grid;
@@ -87,17 +87,7 @@ grid-row: 2 / 3;
 grid-row: 2 / 3;
 grid-column: 2 / 3;
 }
-/*----------- LIST MODE --------------*/
-.list section {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  margin: 0;
-  column-gap: 1.5em;
-  align-items: center;
-  justify-content: center;
-  align-self: center;
 
-}
 
 /*----------- CONTACT US --------------*/
 
