--- a/templesuites/css/medium.css
+++ b/templesuites/css/medium.css
@@ -62,51 +62,60 @@
 
   /*----------- TEMPLES --------------*/
 
-.grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  
-}
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    
+  }
 
-.grid section {
-margin: 0.5%;
-display: block;
-}
-.grid section:nth-child(1) {
-grid-column: 1 / 2;
+  .grid section {
+  margin: 0.5%;
+  display: block;
+  }
+  .grid section:nth-child(1) {
+  grid-column: 1 / 2;
 
-}
-.grid section:nth-child(2) {
-grid-column: 2 / 3;
-grid-row: 1 / 2;
-}
-.grid section:nth-child(3) {
-grid-row: 2 / 3; 
-}
-.grid section:nth-child(4) {
-grid-row: 2 / 3;
-grid-column: 2 / 3;
-}
-
-
-/*----------- CONTACT US --------------*/
+  }
+  .grid section:nth-child(2) {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  }
+  .grid section:nth-child(3) {
+  grid-row: 2 / 3; 
+  }
+  .grid section:nth-child(4) {
+  grid-row: 2 / 3;
+  grid-column: 2 / 3;
+  }
 
 
-.contact-info {
-  display: flex;
-  gap: 2.5rem;
-  margin-bottom: 1rem;
-}
+  /*----------- RECEPTIONS --------------*/
 
-.gmap picture img{
-    max-width: 400px;
-}
-.point-contact{
-    margin-top: 3rem;
-}
-.contact_form .submitBtn {
-  max-width: 25rem;
-}
+  .reception-grid {
+    display: grid;
+    grid-gap: 1rem;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .reception-hall {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
+  .reception-food {
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
+
+  .reception-setup {
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+
+  .cater-options {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
 
   
     /* ---------- FOOTER ---------- */
